kubernetes/apps/forgejo-system/runner/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.ajgon.casa/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: runner-egress-internal
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - runner
          - runner-instance
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: forgejo
      toPorts:
        - ports:
            - protocol: TCP
              port: "3000"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: dufs
      toPorts:
        - ports:
            - protocol: TCP
              port: "5000"
